src/objects/QueueRecordType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Relation between Queues and Recordtypes. Replica of Email Service Configuration</description>
    <fields>
        <fullName>Account_Record_Type_Id__c</fullName>
        <label>Account Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Name__c</fullName>
        <label>Account Record Type Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Record_Type_Id__c</fullName>
        <label>Activity Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_record_Type_Name__c</fullName>
        <label>Activity record Type Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Id__c</fullName>
        <label>Case Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <label>Case Record Type Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDO__c</fullName>
        <label>MDO</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>QueueRecordType</label>
    <listViews>
        <fullName>AA_Queues</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>AA</value>
        </filters>
        <label>AA Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL</fullName>
        <columns>MDO__c</columns>
        <columns>Region__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASIA_Queues</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>ASIA</value>
        </filters>
        <label>ASIA Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_Queues</fullName>
        <columns>Queue_Name__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>MDO__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>BR</value>
        </filters>
        <label>BR Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Queues</fullName>
        <columns>MDO__c</columns>
        <columns>Region__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>EU</value>
        </filters>
        <label>EU Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>contains</operation>
            <value>German</value>
        </filters>
        <label>Germany</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IMEA_queues</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>IMEA</value>
        </filters>
        <label>IMEA queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LA_Queues</fullName>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>MDO__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>LA</value>
        </filters>
        <label>LA Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NA_Queues</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Case_Record_Type_Id__c</columns>
        <columns>Case_Record_Type_Name__c</columns>
        <columns>Account_Record_Type_Id__c</columns>
        <columns>Account_Record_Type_Name__c</columns>
        <columns>Activity_Record_Type_Id__c</columns>
        <columns>Activity_record_Type_Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>MDO__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Queue_Name__c</field>
            <operation>startsWith</operation>
            <value>Social Care NA</value>
        </filters>
        <label>NA Queues</label>
        <language>en_US</language>
    </listViews>
</CustomObject>